--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "repository": "https://github.com/archriss/react-native-render-html",
   "description": "React Native component that renders HTML as native views",
   "types": "types/react-native-render-html/index.d.ts",
+  "homepage": "https://github.com/archriss/react-native-render-html#readme",
+
   "scripts": {
     "test": "npm run test:js && npm run test:ts",
     "test:ts": "dtslint types/react-native-render-html",
